--- a/srcs/mysql/srcs/my.cnf
+++ b/srcs/mysql/srcs/my.cnf
@@ -11,9 +11,9 @@ symbolic-links=0
 # include all files from the config directory
 !includedir /etc/my.cnf.d
 [mysqld]
-socket          = /run/mysqld/mysqld.sock
-datadir			= /var/lib/mysql
-port            = 3306	
-explicit_defaults_for_timestamp = 1
-skip-bind-address						
+user			= root
+port			= 3306
+datadir     	= /var/lib/mysql
+bind-address    = 0.0.0.0
+# skip-bind-address
 skip-networking	= false
