--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -31,19 +31,19 @@ http{
             try_files $uri $uri/ =404;
         }
 
-        #location /wordpress {
-         #   return 307  http://192.168.49.2:5050/;
-        #}
+        location /wordpress {
+            return 307  http://192.168.49.2:5050/;
+        }
 
-        #location /phpmyadmin {
-        #    proxy_pass http://192.168.49.2:5000/;
-        #}
+        location /phpmyadmin {
+            proxy_pass http://192.168.49.2:5000/;
+        }
 
-        #location = /favicon.ico {
-        #    return 204;
-        #    access_log     off;
-          #  log_not_found  off;
-        #}
+        location = /favicon.ico {
+            return 204;
+            access_log     off;
+            log_not_found  off;
+        }
 
     }
 }
