--- a/srcs/wordpress/wordpress.yaml
+++ b/srcs/wordpress/wordpress.yaml
@@ -1,68 +1,39 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wordpress
   annotations:
     metallb.universe.tf/allow-shared-ip: "true"
-  labels:
-    app: wordpress
+  name: wordpress
 spec:
-  ports:
-    - port: 5050          #Port exposé par le service à l'intérieur du cluster
-      targetPort: 80      #Port exposé par les pods sélectionnés par ce service
+  type: LoadBalancer
   selector:
     app: wordpress
-    tier: frontend
-  type: LoadBalancer
+  ports:
+  - port: 5050
+    targetPort: 5050
+    name: wordpress
+
 ---
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: wp-pv-claim
-  labels:
-    app: wordpress
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 2Gi
----
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: wordpress
+  name: wordpress-deployment
   labels:
     app: wordpress
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: wordpress
-      tier: frontend
-  strategy:
-    type: Recreate
   template:
     metadata:
       labels:
         app: wordpress
-        tier: frontend
     spec:
       containers:
-      - image: wordpress:4.8-apache
-        name: wordpress
-        #imagePullPolicy: Never #toujours utiliser une image local
-        env:
-          - name: WORDPRESS_DB_HOST
-            value: wordpress-mysql
-          - name: WORDPRESS_DB_PASSWORD
-            value: YOUR_PASSWORD
+      - name: wordpress
+        image: wordpress
+        imagePullPolicy: Never
         ports:
-        - containerPort: 80
-          name: wordpress
-        volumeMounts:
-        - name: wordpress-persistent-storage
-          mountPath: /var/www/html
-      volumes:
-      - name: wordpress-persistent-storage
-        persistentVolumeClaim:
-          claimName: wp-pv-claim
+        - containerPort: 5050
