--- a/srcs/mysql/Dockerfile
+++ b/srcs/mysql/Dockerfile
@@ -1,29 +1,18 @@
 FROM alpine
 
-# Installing packages MariaDB
+
 RUN apk update \
-	&& apk add --no-cache mysql mysql-client su-exec\
-    && apk add openrc \
+	&& apk add --no-cache mysql mysql-client \
  	&& addgroup mysql mysql \
 	&& rm -rf /var/lib/mysql && mkdir -p /var/lib/mysql /run/mysqld \
 	&& chown -R mysql:mysql /run/mysqld /var/lib/mysql \
 	&& chmod 1777 /var/run/mysqld /var/lib/mysql 
 
-RUN openrc ; touch /run/openrc/softlevel
-
-RUN sed -i 's/skip-networking/#skip-networking/g' /etc/my.cnf.d/mariadb-server.cnf
-RUN sed -i 's/skip-bind-address/#skip-bind-address/g' /etc/my.cnf.d/mariadb-server.cnf
-
-ADD ./srcs/mysql.sql /tmp
-ADD ./srcs/start.sh .
 COPY ./srcs/my.cnf /etc/my.cnf
+COPY ./srcs/mysql.sql /mysql.sql
+COPY ./srcs/start.sh .
 
-RUN chmod 777 ./start.sh
-
-#VOLUME [ “/sys/fs/cgroup” ]
-VOLUME [ "/var/lib/mysql" ]
-
+RUN chmod 777 start.sh
 EXPOSE 3306
 
-CMD ["/bin/ash","/start.sh"]
-#ENTRYPOINT ["./start.sh"]
+ENTRYPOINT [ "./start.sh" ]
