--- a/srcs/mysql/mysql.yaml
+++ b/srcs/mysql/mysql.yaml
@@ -2,56 +2,62 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql
+  labels:
+    app: wordpress
 spec:
-  type: ClusterIP
-  selector:
-    app: mysql
   ports:
-  - port: 3306
-    protocol: TCP
-    targetPort: 3306
+    - port: 3306
+  selector:
+    app: wordpress
+    tier: mysql
+  type: ClusterIP
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql-pv-claim
   labels:
-    app: mysql
+    app: wordpress
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 20Gi
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mysql-deployment
+  name: mysql
   labels:
-    app: mysql
+    app: wordpress
 spec:
-  replicas: 1
   selector:
     matchLabels:
-      app: mysql
+      app: wordpress
+      tier: mysql
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
-        app: mysql
+        app: wordpress
+        tier: mysql
     spec:
       containers:
-      - name: mysql
-        image: mysql
+      - image: mysql
+        name: mysql
         imagePullPolicy: Never
+        env:
+          - name: MYSQL_ROOT_PASSWORD
+            value: password
         ports:
         - containerPort: 3306
           name: mysql
-        volumeMounts:      
-        - mountPath: /var/lib/mysql
-          name: mysql-pv-claim
-          subPath: mysql
+        volumeMounts:
+        - name: mysql-persistent-storage
+          mountPath: /var/lib/mysql
       volumes:
-      - name: mysql-pv-claim
+      - name: mysql-persistent-storage
         persistentVolumeClaim:
           claimName: mysql-pv-claim
