--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -18,16 +18,16 @@ http{
 
         server_name _;
 
-        root /var/www/app;
+        root /www/;
 
         index index.html;
 
         #ssl on;
-        ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;         #chemin du certificat généré dans dockerfile
-        ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;     
+        ssl_certificate /etc/nginx/nginx-selfsigned.crt;         #chemin du certificat généré dans dockerfile
+        ssl_certificate_key /etc/nginx/nginx-selfsigned.key;     
 
         location / {
-			#include  /etc/nginx/mime.types;
+			include  /etc/nginx/mime.types;
             try_files $uri $uri/ =404;
         }
 
