--- a/srcs/phpmyadmin/srcs/nginx.conf
+++ b/srcs/phpmyadmin/srcs/nginx.conf
@@ -5,10 +5,10 @@ events{
 
 http{
     server {
-        listen 5050 ssl default_server;
-        listen [::]:5050 ssl default_server;
+        listen 5000 ssl default_server;
+        listen [::]:5000 ssl default_server;
 
-        root /var/www/wordpress/;
+        root /var/www/phpmyadmin/;
         error_log /var/log/nginx/error.log error;
         access_log /var/log/nginx/access.log;
         # Add index.php to the list if you are using PHP
@@ -16,8 +16,8 @@ http{
 
         #ssl on;
         ssl_certificate /etc/nginx/nginx-selfsigned.crt;         #chemin du certificat généré dans dockerfile
-        ssl_certificate_key /etc/nginx/nginx-selfsigned.key;  
-        
+        ssl_certificate_key /etc/nginx/nginx-selfsigned.key;
+
         server_name _;
 
         location / {
@@ -26,6 +26,8 @@ http{
             try_files $uri $uri/ =404;
         }
 
+        # pass PHP scripts to FastCGI server
+        #
         location ~ .*.php$ {
                 include fastcgi_params;
                 fastcgi_pass  127.0.0.1:9000;
