--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -13,7 +13,9 @@ COPY ./srcs/index_nginx.html var/www/
 RUN	rm /etc/nginx/nginx.conf
 COPY ./srcs/nginx.conf /etc/nginx/nginx.conf
 
-COPY ./srcs/wp-config.php /www/wordpress/
+COPY ./srcs/wp-config.php var/www/wordpress/
+
+RUN	openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/nginx/nginx-selfsigned.key -out /etc/nginx/nginx-selfsigned.crt -subj "/C=FR/ST=IDF/L=Paris/O=Company/OU=42/CN=mywebsite.com" 
 
 COPY ./srcs/start.sh .
 RUN	chmod +x start.sh
