--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -18,7 +18,7 @@ http{
 
         server_name _;
 
-        root /www/;
+        root /var/www/;
 
         index index.html;
 
@@ -31,12 +31,25 @@ http{
             try_files $uri $uri/ =404;
         }
 
+        #location /wordpress {
+        #    return 307  https://192.168.49.2:5050/;
+        #}
+
+        #location /phpmyadmin {
+        #    proxy_pass https://192.168.49.2:5000/;
+        #}
+
         location /wordpress {
-            return 307  http://192.168.49.2:5050/;
+            return 307 https://192.168.49.2:5050/;
         }
 
-        location /phpmyadmin {
-            proxy_pass http://192.168.49.2:5000/;
+        location = ^(/phpmyadmin)$ {
+            proxy_pass https://192.168.49.2:5000/;
+        }
+
+        location /phpmyadmin/ {
+            ##reverse proxy versIP :PMAPORT
+            proxy_pass https://192.168.49.2:5000/;
         }
 
         location = /favicon.ico {
