--- a/srcs/telegraf/telegraf.conf
+++ b/srcs/telegraf/telegraf.conf
@@ -76,3 +76,17 @@
 
 
 
+
+# [[outputs.file]]
+#     files = ["stdout"]
+#     data_format = "influx"
+
+
+
+
+
+
+
+# [[inputs.kubernetes]]
+#   url = "https://172.17.0.3:10250"
+#     insecure_skip_verify = true
