--- a/srcs/grafana/grafana.yaml
+++ b/srcs/grafana/grafana.yaml
@@ -18,7 +18,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: grafana
+  name: grafana-deployment
   labels:
     app: grafana
 spec:
