--- a/srcs/influxdb/influxdb.yaml
+++ b/srcs/influxdb/influxdb.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: v1
 kind: Service
 metadata:
@@ -31,7 +30,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: influxdb
+  name: influxdb-deployment
   labels:
     app: influxdb
 spec:
