--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -18,7 +18,7 @@ http{
 
         server_name _;
 
-        root /var/www/;
+        root /www;
 
         index index.html;
 
@@ -31,26 +31,23 @@ http{
             try_files $uri $uri/ =404;
         }
 
-        #location /wordpress {
-        #    return 307  https://192.168.49.2:5050/;
-        #}
+        location /wordpress {
+            return 307  https://192.168.49.2:5050/;
+        }
 
-        #location /phpmyadmin {
+        location /phpmyadmin {
+            proxy_pass https://192.168.49.2:5000/;
+        }
+
+
+        #location = ^(/phpmyadmin)$ {
         #    proxy_pass https://192.168.49.2:5000/;
         #}
 
-        location /wordpress {
-            return 307 https://192.168.49.2:5050/;
-        }
-
-        location = ^(/phpmyadmin)$ {
-            proxy_pass https://192.168.49.2:5000/;
-        }
-
-        location /phpmyadmin/ {
+        #location /phpmyadmin/ {
             ##reverse proxy versIP :PMAPORT
-            proxy_pass https://192.168.49.2:5000/;
-        }
+        #    proxy_pass https://192.168.49.2:5000/;
+        #}
 
         location = /favicon.ico {
             return 204;
