--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -20,40 +20,46 @@ http{
 
         root /www;
 
-        index index.html;
+        index index_nginx.html;
 
         #ssl on;
         ssl_certificate /etc/nginx/nginx-selfsigned.crt;         #chemin du certificat généré dans dockerfile
         ssl_certificate_key /etc/nginx/nginx-selfsigned.key;     
 
+        #Multipurpose Internet Mail Extensions. It is a standard that indicates the nature and format of a document, 
+        #file, or assortment of bytes. All web browsers use the MIME type to determine how to process a URL. 
+        #Hence, it is essential that Nginx send the correct MIME type in the response’s Content-Type header.
         location / {
 			include  /etc/nginx/mime.types;
             try_files $uri $uri/ =404;
         }
 
-        location /wordpress {
-            return 307  https://192.168.49.2:5050/;
+        #location /wordpress {
+        #    return 307  https://192.168.49.2:5050/;
+        #}
+
+        #location /phpmyadmin {
+        #    proxy_pass https://192.168.49.2:5000/;
+        #}
+
+        location ~ ^/wordpress(?:/(.*))?$ {
+            return 307 https://192.168.49.2:5050/;
         }
 
-        location /phpmyadmin {
+        location = ^(/phpmyadmin)$ {
             proxy_pass https://192.168.49.2:5000/;
         }
 
-
-        #location = ^(/phpmyadmin)$ {
-        #    proxy_pass https://192.168.49.2:5000/;
-        #}
-
-        #location /phpmyadmin/ {
+        location /phpmyadmin/ {
             ##reverse proxy versIP :PMAPORT
-        #    proxy_pass https://192.168.49.2:5000/;
-        #}
-
-        location = /favicon.ico {
-            return 204;
-            access_log     off;
-            log_not_found  off;
+            proxy_pass https://192.168.49.2:5000/;
         }
+
+        #location = /favicon.ico {
+        #    return 204;
+        #    access_log     off;
+        #    log_not_found  off;
+        #}
 
     }
 }
