--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -26,6 +26,9 @@ http{
         ssl_certificate /etc/nginx/nginx-selfsigned.crt;         #chemin du certificat généré dans dockerfile
         ssl_certificate_key /etc/nginx/nginx-selfsigned.key;     
 
+        #error_page	497	https://$host:$request_uri;
+        #error_page	404 http://$host/phpmyadmin;
+
         #Multipurpose Internet Mail Extensions. It is a standard that indicates the nature and format of a document, 
         #file, or assortment of bytes. All web browsers use the MIME type to determine how to process a URL. 
         #Hence, it is essential that Nginx send the correct MIME type in the response’s Content-Type header.
@@ -43,11 +46,7 @@ http{
         #}
 
         location ~ ^/wordpress(?:/(.*))?$ {
-            return 307 https://192.168.49.2:5050/;
-        }
-
-        location = ^(/phpmyadmin)$ {
-            proxy_pass https://192.168.49.2:5000/;
+            return 307 http://192.168.49.2:5050/;
         }
 
         location /phpmyadmin/ {
@@ -55,11 +54,15 @@ http{
             proxy_pass https://192.168.49.2:5000/;
         }
 
-        #location = /favicon.ico {
-        #    return 204;
-        #    access_log     off;
-        #    log_not_found  off;
-        #}
+        location /index.php {
+            return 302 https://$host/phpmyadmin;
+        }
+
+        location = /favicon.ico {
+            return 204;
+            access_log     off;
+            log_not_found  off;
+        }
 
     }
 }
