--- a/srcs/phpmyadmin/srcs/nginx.conf
+++ b/srcs/phpmyadmin/srcs/nginx.conf
@@ -4,6 +4,7 @@ events{
 }
 
 http{
+
     server {
         listen 5000 ssl default_server;
         listen [::]:5000 ssl default_server;
@@ -12,7 +13,7 @@ http{
         error_log /var/log/nginx/error.log error;
         access_log /var/log/nginx/access.log;
         # Add index.php to the list if you are using PHP
-        index index.php;
+        index index.php index_nginx.html;
 
         #ssl on;
         ssl_certificate /etc/nginx/nginx-selfsigned.crt;         #chemin du certificat généré dans dockerfile
@@ -20,12 +21,20 @@ http{
 
         server_name _;
 
+        error_page 497		https://$host:5000$request_uri;
+        
         location / {
             autoindex on;
             include  /etc/nginx/mime.types;
             try_files $uri $uri/ =404;
         }
 
+        location /phpmyadmin {
+            return 302 /;
+        }
+            location /phpmyadmin/ {
+            return 302 /;
+        }
         # pass PHP scripts to FastCGI server
         #
         location ~ .*.php$ {
@@ -34,6 +43,7 @@ http{
                 fastcgi_index index.php;
                 fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
                 fastcgi_param SERVER_NAME $http_host;
+                #include fastcgi.conf;
                 fastcgi_ignore_client_abort on;
 
         }
