--- a/srcs/wordpress/srcs/nginx.conf
+++ b/srcs/wordpress/srcs/nginx.conf
@@ -5,18 +5,18 @@ events{
 
 http{
     server {
-        listen 5050 ssl default_server;
-        listen [::]:5050 ssl default_server;
+        listen 5050 default_server;
+        listen [::]:5050 default_server;
 
         root /var/www/wordpress/;
         error_log /var/log/nginx/error.log error;
         access_log /var/log/nginx/access.log;
         # Add index.php to the list if you are using PHP
-        index index.php;
+        index index.php index_nginx.html;
 
         #ssl on;
-        ssl_certificate /etc/nginx/nginx-selfsigned.crt;         #chemin du certificat généré dans dockerfile
-        ssl_certificate_key /etc/nginx/nginx-selfsigned.key;  
+        #ssl_certificate /etc/nginx/nginx-selfsigned.crt;         #chemin du certificat généré dans dockerfile
+        #ssl_certificate_key /etc/nginx/nginx-selfsigned.key;  
         
         server_name _;
 
