--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -29,6 +29,8 @@ http{
         #error_page	497	https://$host:$request_uri;
         #error_page	404 http://$host/phpmyadmin;
 
+        error_page 497		https://$host:$request_uri;
+
         #Multipurpose Internet Mail Extensions. It is a standard that indicates the nature and format of a document, 
         #file, or assortment of bytes. All web browsers use the MIME type to determine how to process a URL. 
         #Hence, it is essential that Nginx send the correct MIME type in the response’s Content-Type header.
