--- a/srcs/telegraf/telegraf.yaml
+++ b/srcs/telegraf/telegraf.yaml
@@ -63,7 +63,7 @@ metadata:
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: ClusterRoleBinding # accorde des autorisations d'accès à l'échelle du cluster
 metadata:
   name: telegraf
 roleRef:
