--- a/srcs/ftps/vsftpd.conf
+++ b/srcs/ftps/vsftpd.conf
@@ -30,7 +30,7 @@ connect_from_port_20=YES
 # You may override where the log file goes if you like. The default is shown
 # below.
 #xferlog_file=/dev/stdout
-vsftpd_log_file=/proc/1/fd/1
+#vsftpd_log_file=/proc/1/fd/1 ###########################################
 #
 # If you want, you can have your log file in standard ftpd xferlog format.
 # Note that the default log file location is /var/log/xferlog in this case.
@@ -91,7 +91,7 @@ pasv_addr_resolve=YES
 ## Disable seccomp filter sanboxing
 seccomp_sandbox=NO
 # Run in background
-background=NO
+#background=NO
 rsa_cert_file=/etc/ssl/certs/vsftpd.cert.pem
 rsa_private_key_file=/etc/ssl/certs/vsftpd.key.pem
 ssl_enable=YES
